apps/gitops-test/manifest.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: schoolsai-gitops-test
  labels:
    schoolsai.work/managed: 'true'
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitops-test
  namespace: schoolsai-gitops-test
  labels: &id001
    app.kubernetes.io/name: gitops-test
    app.kubernetes.io/managed-by: schoolsai-blueprint
spec:
  replicas: 2
  selector:
    matchLabels: *id001
  template:
    metadata:
      labels: *id001
    spec:
      containers:
      - name: gitops-test
        image: traefik/whoami:v1.11.0
        ports:
        - name: http
          containerPort: 80
        env: []
        readinessProbe:
          httpGet:
            path: /
            port: http
        livenessProbe:
          httpGet:
            path: /
            port: http
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: '1'
            memory: 512Mi
---
apiVersion: v1
kind: Service
metadata:
  name: gitops-test
  namespace: schoolsai-gitops-test
  labels: &id001
    app.kubernetes.io/name: gitops-test
    app.kubernetes.io/managed-by: schoolsai-blueprint
spec:
  selector: *id001
  ports:
  - name: http
    port: 80
    targetPort: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitops-test
  namespace: schoolsai-gitops-test
  labels:
    app.kubernetes.io/name: gitops-test
    app.kubernetes.io/managed-by: schoolsai-blueprint
spec:
  ingressClassName: traefik
  rules:
  - host: gitops-test-vps.schoolsai.work
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gitops-test
            port:
              number: 80
